--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <video src="" autoplay>
         </video>
         <div class="settings">
-            <img src="/images/iconmonstr-time-19.svg" alt="speed" srcset="">
+            <img src="time.svg" alt="speed" srcset="">
             <p data-speed='1' class="spd spdselect">1</p>
             <p data-speed='1.5' class="spd">1.5</p>
             <p data-speed='2' class="spd">2</p>
