--- a/index.html
+++ b/index.html
@@ -29,16 +29,13 @@
             <p>Onyomi</p>
             <p class="lastchild">Meaning</p>
         </div>
-        <!-- <div class="loader">
+        <div class="loader">
+            <span class='overflower'>
             <p>LOADING</p>
-            <span class="rec" style="--rot:0deg; --delay:0s"><div class="circle"></div></span>
-            <span class="rec" style="--rot:51.5deg; --delay:1s"><div class="circle"></div></span>
-            <span class="rec" style="--rot:103deg; --delay:2s"><div class="circle"></div></span>
-            <span class="rec" style="--rot:154.5deg; --delay:3s"><div class="circle"></div></span>
-            <span class="rec" style="--rot:206deg; --delay:4s"><div class="circle"></div></span>
-            <span class="rec" style="--rot:257.5deg; --delay:5s"><div class="circle"></div></span>
-            <span class="rec" style="--rot:309deg; --delay:6s"><div class="circle"></div></span>
-        </div> -->
+
+            </span>
+            <span class='spinner'></span>
+        </div>
     </div>
     
 </body>
