--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
 
     <div class='video__container'>
-        
-         <video src="" autoplay>
-        </video>
+        <video src="" autoplay></video>
         <div class="settings">
             <img src="time.svg" alt="speed" srcset="">
             <p data-speed='1' class="spd spdselect">1</p>
@@ -30,10 +28,7 @@
             <p class="lastchild">Meaning</p>
         </div>
         <div class="loader">
-            <span class='overflower'>
-            <p>LOADING</p>
-
-            </span>
+            <span class='overflower'>LOADING</span>
             <span class='spinner'></span>
         </div>
     </div>
